# veridata

./: .gitignore  AUTHORS  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR-BUILD-SPEC.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi.yml
cli/: Cargo.toml
cli/src/: config.rs  connectors.rs  doctor.rs  keys.rs  main.rs  metrics.rs  pipeline.rs  report.rs  store.rs
cli/tests/: cli_integration.rs
cloud/: Cargo.toml
cloud/src/: config.rs  lib.rs  store.rs
cloud/src/kms/: aws.rs  azure.rs  envelope.rs  gcp.rs  mod.rs
conformance/: README.md  drop.expected.json  drop.vrp.json  dup.expected.json  dup.vrp.json  generate_vectors.py  mutated.expected.json  mutated.vrp.json  tampered.expected.json  tampered.vrp.json  valid.expected.json  valid.vrp.json  validate_p0.py  vrp-0.1.schema.json
connectors/cloud/: Cargo.toml
connectors/cloud/src/: bigquery.rs  databricks.rs  delta_adls.rs  eventhubs.rs  lib.rs  msk.rs  object_iceberg.rs  pubsub.rs
connectors/iceberg/: Cargo.toml
connectors/iceberg/src/: connector.rs  lib.rs  parquet_value.rs  warehouse.rs
connectors/kafka/: Cargo.toml  build.rs
connectors/kafka/src/: connector.rs  lib.rs  memory.rs  parse.rs  rdkafka_reader.rs
core/: Cargo.toml
core/src/: canon.rs  error.rs  hash.rs  identity.rs  lib.rs  model.rs  policy_util.rs  recon.rs  salt.rs  testutil.rs
core/tests/: proptest_recon.rs
docs/: POSITIONING.md
docs/adr/: ADR-001-language.md  ADR-002-reference-path.md
docs/connectors/: CLOUD-EXAMPLES.md  README.md
docs/developer/: COVERAGE-CHECKLIST.md  PROJECT-STATUS.md  README.md  ROADMAP.md  TESTING.md
docs/spec/: VRP-v0.1.md
e2e/: Cargo.toml
e2e/src/: lib.rs  pipeline.rs
e2e/tests/: architecture.rs  spi_kafka_iceberg.rs
proof/: Cargo.toml
proof/src/: lib.rs
proof/src/format/: cbor.rs  error.rs  jcs.rs  mod.rs  types.rs
proof/src/sign/: kms.rs  mod.rs
proof/src/verify/: commitments.rs  mod.rs
proof/tests/: architecture.rs  p1_gates.rs
python/: README.md  pyproject.toml
python/src/veridata_vrp/: __init__.py  cli.py  schema.py  verify.py
python/tests/: test_conformance.py
scripts/: bench-demo.ps1  bench-demo.sh  demo.ps1  demo.sh  install-git-hooks.ps1  install-git-hooks.sh  run-all-gates.ps1  run-all-gates.sh  run-coverage.ps1  run-coverage.sh
spi/: Cargo.toml
spi/src/: boundary.rs  error.rs  lib.rs  record.rs  schema.rs  sink.rs  source.rs
