[package]
name = "veridata-cli"
description = "CLI for verifiable reconciliation proofs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "veridata"
path = "src/main.rs"

[dependencies]
veridata-core = { path = "../core" }
veridata-proof = { path = "../proof" }
veridata-spi = { path = "../spi" }
veridata-connector-kafka = { path = "../connectors/kafka" }
veridata-connector-iceberg = { path = "../connectors/iceberg" }
veridata-e2e = { path = "../e2e" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
base64.workspace = true
