[package]
name = "veridata-cloud"
description = "Cloud KMS signers and object-store proof backends for veridata P4"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
aws = ["dep:aws-sdk-kms", "dep:aws-config", "object_store/aws"]
gcp = ["object_store/gcp", "dep:reqwest", "dep:jsonwebtoken"]
azure = ["dep:azure_security_keyvault_keys", "dep:azure_identity", "object_store/azure"]
all = ["aws", "gcp", "azure"]

[dependencies]
veridata-proof = { path = "../proof" }
object_store = { version = "0.11", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
url = "2"
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures = "0.3"
sha2 = { workspace = true }
hex = { workspace = true }

aws-sdk-kms = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
jsonwebtoken = { version = "9", optional = true }
azure_security_keyvault_keys = { version = "0.6", optional = true }
azure_identity = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
