[package]
name = "veridata-proof"
description = "VRP build, sign, verify for veridata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veridata-core = { path = "../core" }
sha2.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
ciborium.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
veridata-core = { path = "../core", features = ["test-util"] }
