[package]
name = "veridata-spi"
description = "Connector SPI for veridata source/sink integrations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veridata-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
veridata-core = { workspace = true, features = ["test-util"] }
